Atualizando os endpoints
